more change made

--- a/index.html
+++ b/index.html
@@ -109,13 +109,9 @@
 
    				<img src="images/rishi.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am Python & Machine Learning Developer having the Experience of more than
-					   3 years in the industry.I am proficient in writing algorithms for given task whether it's a 
-					   image restoration, image segmentation, forecasting, or a predictive modeling.
-					   I have also 2 years of Experience with web development, <a style="color: blueviolet;" href="https://probog.com">Probog</a>
-					   is my personal project which I built from Scratch. <br>
-					   I am also a full time freelancer for Technical content writing. I have written Technical blogs 
-					   for  companies like <a style="color: blueviolet;" href="https://neptune.ai">neptune.ai</a>
+   				<p class="lead">Hello and Welcome! My name is Rishiraj. I am a font-end coder, digital artist, wordpress fan, an extrovert and a coffee lover.<br>
+					Currently, I am a full-time employee in Accenture, but during my free time, I do something I like, which is designing.
+					I am passionate about minimalistic and flat designs.
 				   </p>
    			</div>
 
